--- a/Vue-01/02-Vue的插值操作/02-v-once指令的使用.html
+++ b/Vue-01/02-Vue的插值操作/02-v-once指令的使用.html
@@ -7,7 +7,8 @@
 <body>
 
     <div id="app">
-        
+        <h2>{{message}}</h2>
+        <h2 v-once>{{message}}</h2>
     </div>
 
     <script src="../js/vue.js"></script>
