--- a/Vue-01/02-Vue的插值操作/03-v-html指令的使用.html
+++ b/Vue-01/02-Vue的插值操作/03-v-html指令的使用.html
@@ -7,7 +7,8 @@
 <body>
 
     <div id="app">
-        
+        <h2>{{url}}</h2>
+        <div v-html="url"></div>
     </div>
 
     <script src="../js/vue.js"></script>
@@ -15,7 +16,8 @@
         const app = new Vue({
             el: '#app',
             data: {
-                message: '你好'
+                message: '你好',
+                url: '<a href="http://www.baibu.com">百度一下</a>'
             }
         })
     </script>
