--- a/Vue-01/02-Vue的插值操作/04-v-text指令的使用.html
+++ b/Vue-01/02-Vue的插值操作/04-v-text指令的使用.html
@@ -7,7 +7,10 @@
 <body>
 
     <div id="app">
-        
+        <!-- 拼接字符串 -->
+        <h2>{{message}}，张艺成</h2>
+        <!-- 覆盖字符串 -->
+        <h2 v-text="message">，张艺成</h2>
     </div>
 
     <script src="../js/vue.js"></script>
