--- a/Vue-01/02-Vue的插值操作/05-v-pre指令的使用.html
+++ b/Vue-01/02-Vue的插值操作/05-v-pre指令的使用.html
@@ -7,7 +7,9 @@
 <body>
 
     <div id="app">
-        
+         <h2>{{message}}</h2>
+         <!-- 不要做解析 -->
+         <h2 v-pre>{{message}}</h2>
     </div>
 
     <script src="../js/vue.js"></script>
