--- a/Vue Code/08-书籍购物车案例/index.html
+++ b/Vue Code/08-书籍购物车案例/index.html
@@ -2,48 +2,47 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>书籍购物车案例</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>书籍购物车案例</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-   
-    <div id="app">
-        <div v-if="books.length">
-            <table cellspacing="0px">
-                <thead align="center">
-                    <tr>
-                        <th></th>
-                        <th>书籍名称</th>
-                        <th>出版日期</th>
-                        <th>价格</th>
-                        <th>购买数量</th>
-                        <th>操作</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr v-for="(book, index) in books">
-                        <td>{{book.id}}</td>
-                        <td>{{book.name}}</td>
-                        <td>{{book.createDate}}</td>
-                        <td>{{book.price | showPrice}}</td>
-                        <td><button @click="decrement(index)"
-                                :disabled="book.amount===1">-</button>{{book.amount}}<button
-                                @click="increment(index)">+</button></td>
-                        <td><button @click="removeHandle(index)">移除</button></td>
-                    </tr>
-                </tbody>
-            </table>
-            <h2>总价格：{{totalPrice | showPrice}}</h2>
-        </div>
-        <div v-else>
-            <h2>购物车为空</h2>
-        </div>
+
+  <div id="app">
+    <div v-if="books.length">
+      <table cellspacing="0px">
+        <thead align="center">
+          <tr>
+            <th></th>
+            <th>书籍名称</th>
+            <th>出版日期</th>
+            <th>价格</th>
+            <th>购买数量</th>
+            <th>操作</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr v-for="(book, index) in books">
+            <td>{{book.id}}</td>
+            <td>{{book.name}}</td>
+            <td>{{book.createDate}}</td>
+            <td>{{book.price | showPrice}}</td>
+            <td><button @click="decrement(index)" :disabled="book.amount===1">-</button>{{book.amount}}<button
+                @click="increment(index)">+</button></td>
+            <td><button @click="removeHandle(index)">移除</button></td>
+          </tr>
+        </tbody>
+      </table>
+      <h2>总价格：{{totalPrice | showPrice}}</h2>
     </div>
-    
-    <script src="../js/vue.js"></script>
-    <script src="main.js"></script>
+    <div v-else>
+      <h2>购物车为空</h2>
+    </div>
+  </div>
+
+  <script src="../js/vue.js"></script>
+  <script src="main.js"></script>
 
 </body>
 
