--- a/webpack的使用/03-webpack的loader/index.html
+++ b/webpack的使用/03-webpack的loader/index.html
@@ -7,6 +7,8 @@
 </head>
 
 <body>
+  <!-- 只要是在终端使用webpack命令，都是使用全局的webpack -->
+  <!-- 要使用本地的webpck，可以在package.json配置脚本build -->
   <h2>这是一个标题</h2>
   <script src="./dist/bundle.js"></script>
 </body>
