--- a/Vue Code/11-组件化高级/04-作用域插槽的案例.html
+++ b/Vue Code/11-组件化高级/04-作用域插槽的案例.html
@@ -14,21 +14,21 @@
     <!-- 目的是获取子组件中的pLanguages -->
     <cpn>
       <template slot-scope="slot">
-        <span v-for="item in slot.data">{{item}} - </span>
+        <span v-for="item in slot.languages">{{item}} - </span>
       </template>
     </cpn>
 
     <cpn>
-      <template slot-scope="slot">
+      <template slot-scope="slot2">
         <!-- 要去掉最后一个 *，可以用join方法 -->
-        <span v-for="item in slot.data.join(' * ')">{{item}}</span>
+        <span v-for="item in slot2.languages.join(' * ')">{{item}}</span>
       </template>
     </cpn>
   </div>
 
   <template id="cpn">
     <div>
-      <slot :data="pLanguages">
+      <slot :languages="pLanguages">
         <ul>
           <li v-for="item in pLanguages">{{item}}</li>
         </ul>
