格式化代码

--- a/05-Promise的使用/02-Promise的别处处理形势.html
+++ b/05-Promise的使用/02-Promise的别处处理形势.html
@@ -14,9 +14,9 @@
         reject("error message")
       }, 1000)
     }).then(data => {
-      console.log(data);
+      console.log(data)
     }, error => {
-      console.log(error);
+      console.log(error)
     });
   </script>
 </body>
