--- a/05-Promise的使用/04-Promise的链式调用(二).html
+++ b/05-Promise的使用/04-Promise的链式调用(二).html
@@ -1,38 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-</head>
-
-<body>
-  <script>
-    // reject可以不写
-    // 网络请求：aaa -> 自己处理(10行)
-    // 处理：aaa111 -> 自己处理(10行)
-    // 处理：aaa111222 -> 自己处理
-    new Promise((resolve, reject) => {
-      setTimeout(() => {
-        resolve('aaa')
-      }, 1000)
-    }).then(result => {
-      // 自己处理10行代码
-      console.log(result, "第一层的10行处理代码");
-      // 2.对结果进行第一次处理，拼接111进行下一步
-      // return Promise.resolve(result + '111')
-      // 也可以手动抛出异常
-      // throw 'throw error message'
-      return Promise.reject('error message')
-    }).then(result => {
-      console.log(result, "第二层的10行处理代码");
-      return Promise.resolve(result + '222')
-    }).then(result => {
-      console.log(result, "第三层的10行处理代码");
-    }).catch(error => {
-      console.log(error);
-    })
-  </script>
-</body>
-
+  <body>
+    <script>
+      // reject可以不写
+      // 网络请求：aaa -> 自己处理(10行)
+      // 处理：aaa111 -> 自己处理(10行)
+      // 处理：aaa111222 -> 自己处理
+      new Promise((resolve, reject) => {
+        setTimeout(() => {
+          resolve("aaa")
+        }, 1000)
+      })
+        .then(result => {
+          // 自己处理10行代码
+          console.log(result, "第一层的10行处理代码")
+          // 2.对结果进行第一次处理，拼接111进行下一步
+          // return Promise.resolve(result + '111')
+          // 也可以手动抛出异常
+          // throw 'throw error message'
+          return Promise.reject("error message")
+        })
+        .then(result => {
+          console.log(result, "第二层的10行处理代码")
+          return Promise.resolve(result + "222")
+        })
+        .then(result => {
+          console.log(result, "第三层的10行处理代码")
+        })
+        .catch(error => {
+          console.log(error)
+        })
+    </script>
+  </body>
 </html>
