--- a/课后测试/03-组件通信-子传父.html
+++ b/课后测试/03-组件通信-子传父.html
@@ -1,57 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-</head>
-
-<body>
-  <div id="app">
-    <cpn @cpn-click='fatherClick'></cpn>
-  </div>
-
-  <template id="cpn">
-    <div>
-      <button v-for="item in categories" :key="item.id" @click="cpnClick(item)">{{item.name}}</button>
+  <body>
+    <div id="app">
+      <cpn @cpn-click="fatherClick"></cpn>
     </div>
-  </template>
 
-  <script src="../Vue Code/js/vue.js"></script>
-  <script>
-    const cpn = {
-      template: '#cpn',
-      data() {
-        return {
-          categories: [
-            { id: 'aaa', name: '热门推荐' },
-            { id: 'bbb', name: '手机数码' },
-            { id: 'ccc', name: '家用家电' },
-            { id: 'ddd', name: '电脑办公' }
-          ]
-        }
-      },
-      methods: {
-        cpnClick(item) {
-          this.$emit('cpn-click', item)
-        }
-      },
-    };
-    const app = new Vue({
-      el: '#app',
-      data: {
+    <template id="cpn">
+      <div>
+        <button
+          v-for="item in categories"
+          :key="item.id"
+          @click="cpnClick(item)"
+        >
+          {{item.name}}
+        </button>
+      </div>
+    </template>
 
-      },
-      methods: {
-        fatherClick(item){
-          console.log(item)
+    <script src="../Vue Code/js/vue.js"></script>
+    <script>
+      const cpn = {
+        template: "#cpn",
+        data() {
+          return {
+            categories: [
+              { id: "aaa", name: "热门推荐" },
+              { id: "bbb", name: "手机数码" },
+              { id: "ccc", name: "家用家电" },
+              { id: "ddd", name: "电脑办公" }
+            ]
+          }
+        },
+        methods: {
+          cpnClick(item) {
+            this.$emit("cpn-click", item)
+          }
         }
-      },
-      components: {
-        cpn
       }
-    });
-  </script>
-</body>
-
+      const app = new Vue({
+        el: "#app",
+        data: {},
+        methods: {
+          fatherClick(item) {
+            console.log(item)
+          }
+        },
+        components: {
+          cpn
+        }
+      })
+    </script>
+  </body>
 </html>
