--- a/01-VueBase/09-v-model使用/01-v-model的基本使用.html
+++ b/01-VueBase/09-v-model使用/01-v-model的基本使用.html
@@ -1,27 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-</head>
+  <body>
+    <div id="app">
+      <input type="text" v-model="message" />
+      {{message}}
+    </div>
 
-<body>
-
-  <div id="app">
-    <input type="text" v-model="message">
-    {{message}}
-  </div>
-
-  <script src="../js/vue.js"></script>
-  <script>
-    const app = new Vue({
-      el: '#app',
-      data: {
-        message: '你好'
-      }
-    });
-  </script>
-</body>
-
+    <script src="../js/vue.js"></script>
+    <script>
+      const app = new Vue({
+        el: "#app",
+        data: {
+          message: "你好"
+        }
+      })
+    </script>
+  </body>
 </html>
