--- a/01-VueBase/00-ES6补充/01-块级作用域.html
+++ b/01-VueBase/00-ES6补充/01-块级作用域.html
@@ -1,64 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-</head>
+  <body>
+    <button>按钮1</button>
+    <button>按钮2</button>
+    <button>按钮3</button>
+    <button>按钮4</button>
+    <button>按钮5</button>
+    <script>
+      //ES5中的var是没有作用域的(if/for)
+      //ES6中的let是有作用域的(if/for)
 
-<body>
-  <button>按钮1</button>
-  <button>按钮2</button>
-  <button>按钮3</button>
-  <button>按钮4</button>
-  <button>按钮5</button>
-  <script>
+      // ES5之前因为if和for都没有块级作用域的概念，所以在很多时候，我们必须借助于function的作用
+      // 域来解决应用变量的问题
 
-    //ES5中的var是没有作用域的(if/for)
-    //ES6中的let是有作用域的(if/for)
+      // ES6中，加入了let，let是有if和for的块级作用域的
 
-    // ES5之前因为if和for都没有块级作用域的概念，所以在很多时候，我们必须借助于function的作用
-    // 域来解决应用变量的问题
+      // 1.变量作用域：变量在什么范围内是可用
+      // {
+      //     var name = '张三';
+      //     console.log(name);
+      // }
+      // // 同样可以访问块里的内容
+      // console.log(name);
 
-    // ES6中，加入了let，let是有if和for的块级作用域的
+      // 2.没有块级作用域引起的问题：if的块级
+      // var func;
+      // if(true){
+      //     var name = 'why'
+      //     func = function(){
+      //         console.log(name)
+      //     }
+      // }
+      // name = 'Kobe'
+      // //方法修改的结果完全失效
+      // console.log(name);
 
-    // 1.变量作用域：变量在什么范围内是可用    
-    // {
-    //     var name = '张三';
-    //     console.log(name);
-    // }
-    // // 同样可以访问块里的内容
-    // console.log(name);
+      // 3.没有块级作用域引起的问题：for的块级
+      // var btns = document.getElementsByTagName('button');
+      // for(var i = 0;i<btns.length;i++){
+      //     btns[i].addEventListener('click',function(){
+      //         console.log("按钮"+i+"被点击了")
+      //     })
+      // }
 
-    // 2.没有块级作用域引起的问题：if的块级
-    // var func;
-    // if(true){
-    //     var name = 'why'
-    //     func = function(){
-    //         console.log(name)
-    //     }
-    // }
-    // name = 'Kobe'
-    // //方法修改的结果完全失效
-    // console.log(name);
-
-    // 3.没有块级作用域引起的问题：for的块级
-    // var btns = document.getElementsByTagName('button');
-    // for(var i = 0;i<btns.length;i++){
-    //     btns[i].addEventListener('click',function(){
-    //         console.log("按钮"+i+"被点击了")
-    //     })
-    // }
-
-
-    //使用ES6
-    const btns = document.getElementsByTagName('button')
-    for (let i = 0; i < btns.length; i++) {
-      btns[i].addEventListener('click', function () {
-        console.log("按钮" + i + "被点击了");
-      })
-    }
-  </script>
-</body>
-
+      //使用ES6
+      const btns = document.getElementsByTagName("button")
+      for (let i = 0; i < btns.length; i++) {
+        btns[i].addEventListener("click", function() {
+          console.log("按钮" + i + "被点击了")
+        })
+      }
+    </script>
+  </body>
 </html>
