--- a/01-VueBase/00-ES6补充/03-const的使用.html
+++ b/01-VueBase/00-ES6补充/03-const的使用.html
@@ -1,37 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-</head>
+  <body>
+    <script>
+      // 1.注意一: 一旦const修修饰的标识符被赋值之后，不能修改
+      // const name = 'why';
+      // name = 'abc';
 
-<body>
+      // 2.注意二: 在使用const定义标识符，必须进行赋值
+      // const name;
 
-  <script>
-    // 1.注意一: 一旦const修修饰的标识符被赋值之后，不能修改
-    // const name = 'why';
-    // name = 'abc';
+      // 3.注意三: 常量的含义是指对象的不能修改，但是可以改变对象内部的属性
+      const obj = {
+        name: "why",
+        age: 18,
+        height: 191
+      }
 
-    // 2.注意二: 在使用const定义标识符，必须进行赋值
-    // const name;
+      console.log(obj)
 
-    // 3.注意三: 常量的含义是指对象的不能修改，但是可以改变对象内部的属性
-    const obj = {
-      name: 'why',
-      age: 18,
-      height: 191
-    }
+      obj.name = "Kobe"
+      obj.age = 22
+      obj.height = "224"
 
-    console.log(obj);
-
-    obj.name = 'Kobe';
-    obj.age = 22;
-    obj.height = '224';
-
-    console.log(obj);
-
-  </script>
-</body>
-
+      console.log(obj)
+    </script>
+  </body>
 </html>
