--- a/01-VueBase/01-Vue初体验/04-vue的template.html
+++ b/01-VueBase/01-Vue初体验/04-vue的template.html
@@ -1,27 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-</head>
+  <body>
+    <div id="app">
+      {{message}}
+    </div>
 
-<body>
+    <script src="../js/vue.js"></script>
 
-  <div id="app">
-    {{message}}
-  </div>
-
-  <script src="../js/vue.js"></script>
-
-  <script>
-    const app = new Vue({
-      el: '#app',
-      data: {
-        message: 'You are so good!'
-      }
-    });
-  </script>
-</body>
-
+    <script>
+      const app = new Vue({
+        el: "#app",
+        data: {
+          message: "You are so good!"
+        }
+      })
+    </script>
+  </body>
 </html>
