--- a/01-VueBase/02-Vue的插值操作/02-v-once指令的使用.html
+++ b/01-VueBase/02-Vue的插值操作/02-v-once指令的使用.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-</head>
+  <body>
+    <div id="app">
+      <h2>{{message}}</h2>
+      <!-- v-onse修饰的变量在初次定义之后无法被修改 -->
+      <h2 v-once>{{message}}</h2>
+    </div>
 
-<body>
-
-  <div id="app">
-    <h2>{{message}}</h2>
-    <h2 v-once>{{message}}</h2>
-  </div>
-
-  <script src="../js/vue.js"></script>
-  <script>
-    const app = new Vue({
-      el: '#app',
-      data: {
-        message: '你好'
-      }
-    });
-  </script>
-</body>
-
+    <script src="../js/vue.js"></script>
+    <script>
+      const app = new Vue({
+        el: "#app",
+        data: {
+          message: "你好"
+        }
+      })
+    </script>
+  </body>
 </html>
