--- a/01-VueBase/03-动态绑定属性/05-v-bind动态绑定style(对象语法).html
+++ b/01-VueBase/03-动态绑定属性/05-v-bind动态绑定style(对象语法).html
@@ -1,40 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-</head>
+  <body>
+    <div id="app">
+      <!-- <h2 :style="{key(属性名): value(属性值)}"></h2> -->
+      <!-- '50px'必须加上单引号，否则是当成一个变量去解析 -->
+      <!-- <h2 :style="{fontSize: '50px'}">{{message}}</h2> -->
+      <!-- finalSize当成一个变量使用 -->
+      <h2
+        :style="{ fontSize: finalSize, backgroundColor: finalColor }"
+      >
+        {{message}}
+      </h2>
+      <h2 :style="getStyles()">{{message}}</h2>
+    </div>
 
-<body>
-
-  <div id="app">
-    <!-- <h2 :style="{key(属性名): value(属性值)}"></h2> -->
-
-    <!-- '50px'必须加上单引号，否则是当成一个变量去解析 -->
-    <!-- <h2 :style="{fontSize: '50px'}">{{message}}</h2> -->
-
-    <!-- finalSize当成一个变量使用 -->
-    <h2 :style="{ fontSize: this.finalSize, backgroundColor: this.finalColor }">{{message}}</h2>
-    <h2 :style="getStyles()">{{message}}</h2>
-  </div>
-
-  <script src="../js/vue.js"></script>
-  <script>
-    const app = new Vue({
-      el: '#app',
-      data: {
-        message: '你好',
-        finalSize: '100px',
-        finalColor: 'red'
-      },
-      methods: {
-        getStyles: function () {
-          return { fontSize: this.finalSize, backgroundColor: this.finalColor };
+    <script src="../js/vue.js"></script>
+    <script>
+      const app = new Vue({
+        el: "#app",
+        data: {
+          message: "你好",
+          finalSize: "100px",
+          finalColor: "red"
+        },
+        methods: {
+          getStyles: function() {
+            return {
+              fontSize: this.finalSize,
+              backgroundColor: this.finalColor
+            }
+          }
         }
-      },
-    });
-  </script>
-</body>
-
+      })
+    </script>
+  </body>
 </html>
