--- a/01-VueBase/04-计算属性/03-计算属性的setter和getter.html
+++ b/01-VueBase/04-计算属性/03-计算属性的setter和getter.html
@@ -1,44 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-</head>
+  <body>
+    <div id="app">
+      <h2>{{fullName}}</h2>
+    </div>
 
-<body>
-
-  <div id="app">
-    <h2>{{fullName}}</h2>
-  </div>
-
-  <script src="../js/vue.js"></script>
-  <script>
-    const app = new Vue({
-      el: '#app',
-      data: {
-        firstName: 'Kobe',
-        lastName: 'Bryant'
-      },
-      computed: {
-        // fullName: function () {
-        //     return this.firstName + ' ' + this.lastName
-        // }
-        //计算属性一般没有set方法，只读属性
-        fullName: {
-          set: function (newValue) {
-            const names = newValue.split(' ')
-            this.firstName = names[0]
-            this.lastName = names[1]
-            console.log(newValue + "修改成功")
-          },
-          get: function () {
-            return this.firstName + ' ' + this.lastName
+    <script src="../js/vue.js"></script>
+    <script>
+      const app = new Vue({
+        el: "#app",
+        data: {
+          firstName: "Kobe",
+          lastName: "Bryant"
+        },
+        computed: {
+          // fullName: function () {
+          //     return this.firstName + ' ' + this.lastName
+          // }
+          //计算属性一般没有set方法，只读属性
+          fullName: {
+            set: function(newValue) {
+              const names = newValue.split(" ")
+              this.firstName = names[0]
+              this.lastName = names[1]
+              console.log(newValue + "修改成功")
+            },
+            get: function() {
+              return this.firstName + " " + this.lastName
+            }
           }
         }
-      },
-    });
-  </script>
-</body>
-
+      })
+    </script>
+  </body>
 </html>
