--- a/01-VueBase/04-计算属性/04-计算属性和methods的对比.html
+++ b/01-VueBase/04-计算属性/04-计算属性和methods的对比.html
@@ -1,52 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-</head>
+  <body>
+    <div id="app">
+      <!-- 1. 直接拼接：语法过于繁琐 -->
+      <h2>{{firstName}} {{lastName}}</h2>
 
-<body>
-
-  <div id="app">
-    <!-- 1. 直接拼接：语法过于繁琐 -->
-    <h2>{{firstName}} {{lastName}}</h2>
-
-    <!-- 2. 通过定义methods -->
-    <!-- <h2>{{getFullName()}}</h2>
+      <!-- 2. 通过定义methods -->
+      <!-- <h2>{{getFullName()}}</h2>
         <h2>{{getFullName()}}</h2>
         <h2>{{getFullName()}}</h2>
         <h2>{{getFullName()}}</h2> -->
 
-    <!-- 3. 通过computed -->
-    <h2>{{fullName}}</h2>
-    <h2>{{fullName}}</h2>
-    <h2>{{fullName}}</h2>
-    <h2>{{fullName}}</h2>
-  </div>
+      <!-- 3. 通过computed -->
+      <h2>{{fullName}}</h2>
+      <h2>{{fullName}}</h2>
+      <h2>{{fullName}}</h2>
+      <h2>{{fullName}}</h2>
+    </div>
 
-  <script src="../js/vue.js"></script>
-  <script>
-    const app = new Vue({
-      el: '#app',
-      data: {
-        firstName: 'Kobe',
-        lastName: 'Bryant'
-      },
-      computed: {
-        fullName: function () {
-          console.log('fullName');
-          return this.firstName + ' ' + this.lastName
+    <script src="../js/vue.js"></script>
+    <script>
+      const app = new Vue({
+        el: "#app",
+        data: {
+          firstName: "Kobe",
+          lastName: "Bryant"
+        },
+        computed: {
+          fullName: function() {
+            console.log("fullName")
+            return this.firstName + " " + this.lastName
+          }
+        },
+        methods: {
+          getFullName: function() {
+            console.log("getFullName")
+            return this.firstName + " " + this.lastName
+          }
         }
-      },
-      methods: {
-        getFullName: function () {
-          console.log('getFullName');
-          return this.firstName + ' ' + this.lastName
-        }
-      },
-    });
-  </script>
-</body>
-
+      })
+    </script>
+  </body>
 </html>
