--- a/01-VueBase/05-事件监听/03-v-on的修饰符.html
+++ b/01-VueBase/05-事件监听/03-v-on的修饰符.html
@@ -1,58 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-</head>
+  <body>
+    <div id="app">
+      <!-- 1.修饰符.stop的使用(可以终止冒泡) -->
+      <div @click="divClick">
+        aaa
+        <button @click.stop="btnClick">按钮</button>
+      </div>
 
-<body>
+      <!-- 2.修饰符.prevent的使用 -->
+      <form action="baidu">
+        <input type="submit" value="提交" @click.prevent="submitClick" />
+      </form>
 
-  <div id="app">
-    <!-- 1.修饰符.stop的使用(可以终止冒泡) -->
-    <div @click="divClick">
-      aaa
-      <button @click.stop="btnClick">按钮</button>
+      <!-- 3.监听某个键盘的键帽的点击 -->
+      <input type="text" @keyup.enter="keyUp" />
+
+      <!-- 4.修饰符.once的使用 -->
+      <button @click.once="btn2Click">按钮2</button>
     </div>
 
-    <!-- 2.修饰符.prevent的使用 -->
-    <form action="baidu">
-      <input type="submit" value="提交" @click.prevent="submitClick">
-    </form>
-
-    <!-- 3.监听某个键盘的键帽的点击 -->
-    <input type="text" @keyup.enter="keyUp">
-
-    <!-- 4.修饰符.once的使用 -->
-    <button @click.once="btn2Click">按钮2</button>
-  </div>
-
-  <script src="../js/vue.js"></script>
-  <script>
-    const app = new Vue({
-      el: '#app',
-      data: {
-        message: '你好'
-      },
-      methods: {
-        btnClick() {
-          console.log("btnClick");
+    <script src="../js/vue.js"></script>
+    <script>
+      const app = new Vue({
+        el: "#app",
+        data: {
+          message: "你好"
         },
-        divClick() {
-          console.log("divClick");
-        },
-        submitClick() {
-          console.log("submitClick");
-        },
-        keyUp() {
-          console.log("keyUp");
-        },
-        btn2Click() {
-          console.log("btn2Click");
+        methods: {
+          btnClick() {
+            console.log("btnClick")
+          },
+          divClick() {
+            console.log("divClick")
+          },
+          submitClick() {
+            console.log("submitClick")
+          },
+          keyUp() {
+            console.log("keyUp")
+          },
+          btn2Click() {
+            console.log("btn2Click")
+          }
         }
-      },
-    });
-  </script>
-</body>
-
+      })
+    </script>
+  </body>
 </html>
