--- a/01-VueBase/06-条件判断/01-v-if的使用.html
+++ b/01-VueBase/06-条件判断/01-v-if的使用.html
@@ -1,27 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-</head>
+  <body>
+    <div id="app">
+      <h2 v-if="isShow">{{message}}</h2>
+    </div>
 
-<body>
-
-  <div id="app">
-    <h2 v-if="isShow">{{message}}</h2>
-  </div>
-
-  <script src="../js/vue.js"></script>
-  <script>
-    const app = new Vue({
-      el: '#app',
-      data: {
-        message: '你好',
-        isShow: false
-      }
-    });
-  </script>
-</body>
-
+    <script src="../js/vue.js"></script>
+    <script>
+      const app = new Vue({
+        el: "#app",
+        data: {
+          message: "你好",
+          isShow: false
+        }
+      })
+    </script>
+  </body>
 </html>
