--- a/01-VueBase/06-条件判断/02-v-if和v-else的使用.html
+++ b/01-VueBase/06-条件判断/02-v-if和v-else的使用.html
@@ -1,28 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-</head>
+  <body>
+    <div id="app">
+      <h2 v-if="isShow">{{message}}</h2>
+      <h2 v-else>isShow为false时，显示我</h2>
+    </div>
 
-<body>
-
-  <div id="app">
-    <h2 v-if="isShow">{{message}}</h2>
-    <h2 v-else>isShow为false时，显示我</h2>
-  </div>
-
-  <script src="../js/vue.js"></script>
-  <script>
-    const app = new Vue({
-      el: '#app',
-      data: {
-        message: '你好',
-        isShow: true
-      }
-    });
-  </script>
-</body>
-
+    <script src="../js/vue.js"></script>
+    <script>
+      const app = new Vue({
+        el: "#app",
+        data: {
+          message: "你好",
+          isShow: true
+        }
+      })
+    </script>
+  </body>
 </html>
