--- a/01-VueBase/07-循环遍历/01-v-for遍历数组.html
+++ b/01-VueBase/07-循环遍历/01-v-for遍历数组.html
@@ -1,33 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-</head>
+  <body>
+    <div id="app">
+      <!-- 1.在遍历过程中，没有使用索引值(下标值) -->
+      <ul>
+        <li v-for="item in names">{{item}}</li>
+      </ul>
 
-<body>
+      <ul>
+        <li v-for="(item, index) in names">{{index + 1}}-{{item}}</li>
+      </ul>
+    </div>
 
-  <div id="app">
-    <!-- 1.在遍历过程中，没有使用索引值(下标值) -->
-    <ul>
-      <li v-for="item in names">{{item}}</li>
-    </ul>
-
-    <ul>
-      <li v-for="(item, index) in names">{{index + 1}}-{{item}}</li>
-    </ul>
-  </div>
-
-  <script src="../js/vue.js"></script>
-  <script>
-    const app = new Vue({
-      el: '#app',
-      data: {
-        names: ['why', 'kobe', 'james', 'curry']
-      }
-    });
-  </script>
-</body>
-
+    <script src="../js/vue.js"></script>
+    <script>
+      const app = new Vue({
+        el: "#app",
+        data: {
+          names: ["why", "kobe", "james", "curry"]
+        }
+      })
+    </script>
+  </body>
 </html>
