--- a/01-VueBase/07-循环遍历/02-v-for遍历对象.html
+++ b/01-VueBase/07-循环遍历/02-v-for遍历对象.html
@@ -1,45 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-</head>
+  <body>
+    <!-- 1.在遍历对象的时候，如果只是获取一个值，那么获取到的是value -->
+    <div id="app">
+      <ul>
+        <li v-for="item in info">{{item}}</li>
+      </ul>
 
-<body>
+      <!-- 2.获取key和value ===> (value,key) -->
+      <ul>
+        <li v-for="(value, key) in info">{{key}}-{{value}}</li>
+      </ul>
 
-  <!-- 1.在遍历对象的时候，如果只是获取一个值，那么获取到的是value -->
-  <div id="app">
-    <ul>
-      <li v-for="item in info">{{item}}</li>
-    </ul>
+      <!-- 3.获取key和value ===> (value,key,index) -->
+      <ul>
+        <li v-for="(value, key, index) in info">{{index}}-{{key}}-{{value}}</li>
+      </ul>
+    </div>
 
-    <!-- 2.获取key和value ===> (value,key) -->
-    <ul>
-      <li v-for="(value, key) in info">{{key}}-{{value}}</li>
-    </ul>
-
-    <!-- 3.获取key和value ===> (value,key,index) -->
-    <ul>
-      <li v-for="(value, key,index) in info">{{index}}-{{key}}-{{value}}</li>
-    </ul>
-
-
-  </div>
-
-  <script src="../js/vue.js"></script>
-  <script>
-    const app = new Vue({
-      el: '#app',
-      data: {
-        info: {
-          name: 'why',
-          age: 18,
-          height: 188
+    <script src="../js/vue.js"></script>
+    <script>
+      const app = new Vue({
+        el: "#app",
+        data: {
+          info: {
+            name: "why",
+            age: 18,
+            height: 188
+          }
         }
-      }
-    });
-  </script>
-</body>
-
+      })
+    </script>
+  </body>
 </html>
