--- a/01-VueBase/07-循环遍历/03-v-for使用过程添加key.html
+++ b/01-VueBase/07-循环遍历/03-v-for使用过程添加key.html
@@ -1,28 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-</head>
+  <body>
+    <div id="app">
+      <ul>
+        <li v-for="item in letters" :key="item">{{item}}</li>
+      </ul>
+    </div>
 
-<body>
-
-  <div id="app">
-    <ul>
-      <li v-for="item in letters" :key="item">{{item}}</li>
-    </ul>
-  </div>
-
-  <script src="../js/vue.js"></script>
-  <script>
-    const app = new Vue({
-      el: '#app',
-      data: {
-        letters: ['A', 'B', 'C', 'D', 'E']
-      }
-    });
-  </script>
-</body>
-
+    <script src="../js/vue.js"></script>
+    <script>
+      const app = new Vue({
+        el: "#app",
+        data: {
+          letters: ["A", "B", "C", "D", "E"]
+        }
+      })
+    </script>
+  </body>
 </html>
