--- a/01-VueBase/09-v-model使用/02-v-model的原理.html
+++ b/01-VueBase/09-v-model使用/02-v-model的原理.html
@@ -1,34 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-</head>
+  <body>
+    <div id="app">
+      <!-- <input type="text" v-model="message"> -->
+      <!-- <input type="text" v-bind:value="message" @input="valueChange"> -->
+      <input
+        type="text"
+        :value="message"
+        @input="message = $event.target.value"
+      />
+      <h2>{{message}}</h2>
+    </div>
 
-<body>
-
-  <div id="app">
-    <!-- <input type="text" v-model="message"> -->
-    <!-- <input type="text" v-bind:value="message" @input="valueChange"> -->
-    <input type="text" :value="message" @input="message = $event.target.value">
-    <h2>{{message}}</h2>
-  </div>
-
-  <script src="../js/vue.js"></script>
-  <script>
-    const app = new Vue({
-      el: '#app',
-      data: {
-        message: '你好'
-      },
-      methods: {
-        valueChange(event) {
-          this.message = event.target.value
+    <script src="../js/vue.js"></script>
+    <script>
+      const app = new Vue({
+        el: "#app",
+        data: {
+          message: "你好"
+        },
+        methods: {
+          valueChange(event) {
+            this.message = event.target.value
+          }
         }
-      },
-    });
-  </script>
-</body>
-
+      })
+    </script>
+  </body>
 </html>
