--- a/01-VueBase/10-组件化开发/02-全局组件和局部组件.html
+++ b/01-VueBase/10-组件化开发/02-全局组件和局部组件.html
@@ -1,57 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-</head>
+  <body>
+    <div id="app">
+      <cpn></cpn>
+      <cpn></cpn>
+      <cpn></cpn>
+    </div>
 
-<body>
-
-  <div id="app">
-    <cpn></cpn>
-    <cpn></cpn>
-    <cpn></cpn>
-  </div>
-
-  <div id="app2">
-    <cpn></cpn>
-    <cpn></cpn>
-  </div>
-  <script src="../js/vue.js"></script>
-  <script>
-    // 1.创建组件构造器
-    const cpnC = Vue.extend({
-      template: `
+    <div id="app2">
+      <cpn></cpn>
+      <cpn></cpn>
+    </div>
+    <script src="../js/vue.js"></script>
+    <script>
+      // 1.创建组件构造器
+      const cpnC = Vue.extend({
+        template: `
             <div>
                 <h2>我是标题</h2>
                 <p>我是内容</p>
                 <p>我是内容</p>
             </div>`
-    })
-    // 2.注册组件(全局组件，意味着可以在多个Vue的实例下使用)
-    // Vue.component('cpn', cpnC)
+      })
+      // 2.注册组件(全局组件，意味着可以在多个Vue的实例下使用)
+      // Vue.component('cpn', cpnC)
 
-    // 怎么注册的组件才是局部组件呢
+      // 怎么注册的组件才是局部组件呢
 
-    const app = new Vue({
-      el: '#app',
-      data: {
-        message: '你好'
-      },
-      components: {
-        // cpn是使用组件时的标签名
-        cpn: cpnC
-      }
-    });
+      const app = new Vue({
+        el: "#app",
+        data: {
+          message: "你好"
+        },
+        components: {
+          // cpn是使用组件时的标签名
+          cpn: cpnC
+        }
+      })
 
-    const app2 = new Vue({
-      el: '#app2',
-      data: {
-        message: '你好'
-      }
-    });
-  </script>
-</body>
-
+      const app2 = new Vue({
+        el: "#app2",
+        data: {
+          message: "你好"
+        }
+      })
+    </script>
+  </body>
 </html>
