--- a/01-VueBase/10-组件化开发/06-组件中的数据存放问题.html
+++ b/01-VueBase/10-组件化开发/06-组件中的数据存放问题.html
@@ -1,48 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-</head>
-
-<body>
-
-  <div id="app">
-    <cpn></cpn>
-    <cpn></cpn>
-  </div>
-
-  <!-- 组件不可以访问vue实例中的变量 -->
-  <template id="cpn">
-    <div>
-      <h2>{{title}}</h2>
-      <p>我是内容</p>
-      <p>我是内容</p>
+  <body>
+    <div id="app">
+      <cpn></cpn>
+      <cpn></cpn>
     </div>
-  </template>
 
+    <!-- 组件不可以访问vue实例中的变量 -->
+    <template id="cpn">
+      <div>
+        <h2>{{title}}</h2>
+        <p>我是内容</p>
+        <p>我是内容</p>
+      </div>
+    </template>
 
-  <script src="../js/vue.js"></script>
-  <script>
-    // 1.注册一个全局组件
-    Vue.component('cpn', {
-      template: '#cpn',
-      data() {
-        return {
-          title: '我是定义在组件中的'
+    <script src="../js/vue.js"></script>
+    <script>
+      // 1.注册一个全局组件
+      Vue.component("cpn", {
+        template: "#cpn",
+        data() {
+          return {
+            title: "我是定义在组件中的"
+          }
         }
-      }
-    })
+      })
 
-
-    const app = new Vue({
-      el: '#app',
-      data: {
-        message: '你好'
-      }
-    });
-  </script>
-</body>
-
+      const app = new Vue({
+        el: "#app",
+        data: {
+          message: "你好"
+        }
+      })
+    </script>
+  </body>
 </html>
