--- a/01-VueBase/10-组件化开发/08-组件通信-父组件向子组件传递数据.html
+++ b/01-VueBase/10-组件化开发/08-组件通信-父组件向子组件传递数据.html
@@ -1,78 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-</head>
-
-<body>
-
-  <div id="app">
-    <cpn v-bind:cmessage="message" v-bind:cmovies="movies"></cpn>
-  </div>
-
-  <template id="cpn">
-    <div>
-      <h2>这是一个cpn标题</h2>
-      <ul>
-        <li v-for="item in cmovies">{{item}}</li>
-      </ul>
-      <p>{{cmessage}}</p>
+  <body>
+    <div id="app">
+      <cpn v-bind:cmessage="message" v-bind:cmovies="movies"></cpn>
     </div>
-  </template>
 
-  <script src="../js/vue.js"></script>
-  <script>
-    const cpn = {
-      template: '#cpn',
+    <template id="cpn">
+      <div>
+        <h2>这是一个cpn标题</h2>
+        <ul>
+          <li v-for="item in cmovies">{{item}}</li>
+        </ul>
+        <p>{{cmessage}}</p>
+      </div>
+    </template>
 
-      //数组形式
-      // props: ['cmovies', 'cmessage'],
+    <script src="../js/vue.js"></script>
+    <script>
+      const cpn = {
+        template: "#cpn",
 
-      // 对象形式
-      props: {
-        // // 1.类型限制
-        // cmovies: Array,
-        // cmessage: String
-        // cname: [String, Array] 多种类型就这样写
-        // 类型种类：String, Number, Boolean, Array, Object, Data, Function, Symbol
-        // function Person(firstName, lsatName) {
-        // }
-        // 也可以自己定义一个function，然后author: Person
+        //数组形式
+        // props: ['cmovies', 'cmessage'],
 
-        // 2.提供一些默认值，以及必传值
-        cmessage: {
-          type: String,
-          // 默认值
-          default: 'aaaa',
-          // 必须传值
-          required: true
-        },
-        // 类型是对象或者数组时，默认值必须是一个函数
-        cmovies: {
-          type: Array,
-          default() {
-            return []
+        // 对象形式
+        props: {
+          // // 1.类型限制
+          // cmovies: Array,
+          // cmessage: String
+          // cname: [String, Array] 多种类型就这样写
+          // 类型种类：String, Number, Boolean, Array, Object, Data, Function, Symbol
+          // function Person(firstName, lsatName) {
+          // }
+          // 也可以自己定义一个function，然后author: Person
+
+          // 2.提供一些默认值，以及必传值
+          cmessage: {
+            type: String,
+            // 默认值
+            default: "aaaa",
+            // 必须传值
+            required: true
+          },
+          // 类型是对象或者数组时，默认值必须是一个函数
+          cmovies: {
+            type: Array,
+            default() {
+              return []
+            }
+            // 还可以自定义验证函数
           }
-          // 还可以自定义验证函数
+        },
+        data() {
+          return {}
         }
-      },
-      data() {
-        return {}
       }
-    }
-    const app = new Vue({
-      el: '#app',
-      data: {
-        message: '你好',
-        movies: ['海王', '火影忍者', '进击的巨人', '星际穿越']
-      },
-      components: {
-        cpn
-      }
-    });
-  </script>
-</body>
-
+      const app = new Vue({
+        el: "#app",
+        data: {
+          message: "你好",
+          movies: ["海王", "火影忍者", "进击的巨人", "星际穿越"]
+        },
+        components: {
+          cpn
+        }
+      })
+    </script>
+  </body>
 </html>
