--- a/01-VueBase/11-组件化高级/02-slot-具名插槽的使用.html
+++ b/01-VueBase/11-组件化高级/02-slot-具名插槽的使用.html
@@ -1,43 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-</head>
-
-<body>
-
-  <div id="app">
-    <!-- 如果只需要改一个插槽，只能用具名插槽，以下这种情况会改动所有插槽 -->
-    <!-- <cpn><span>标题</span></cpn> -->
-    <cpn><span slot="center">标题</span></cpn>
-    <cpn><span slot="left">修改左边</span></cpn>
-    <cpn><button slot="left">返回</button></cpn>
-  </div>
-
-  <template id="cpn">
-    <div>
-      <slot name="left"><span>左边</span></slot>
-      <slot name="center"><span>中间</span></slot>
-      <slot name="right"><span>右边</span></slot>
+  <body>
+    <div id="app">
+      <!-- 如果只需要改一个插槽，只能用具名插槽，以下这种情况会改动所有插槽 -->
+      <!-- <cpn><span>标题</span></cpn> -->
+      <cpn><span slot="center">标题</span></cpn>
+      <cpn><span slot="left">修改左边</span></cpn>
+      <cpn><button slot="left">返回</button></cpn>
     </div>
-  </template>
 
-  <script src="../js/vue.js"></script>
-  <script>
-    const app = new Vue({
-      el: '#app',
-      data: {
-        message: '你好'
-      },
-      components: {
-        cpn: {
-          template: '#cpn'
+    <template id="cpn">
+      <div>
+        <slot name="left"><span>左边</span></slot>
+        <slot name="center"><span>中间</span></slot>
+        <slot name="right"><span>右边</span></slot>
+      </div>
+    </template>
+
+    <script src="../js/vue.js"></script>
+    <script>
+      const app = new Vue({
+        el: "#app",
+        data: {
+          message: "你好"
+        },
+        components: {
+          cpn: {
+            template: "#cpn"
+          }
         }
-      }
-    });
-  </script>
-</body>
-
+      })
+    </script>
+  </body>
 </html>
