--- a/01-VueBase/12-前端模块化/ES6的模块化实现/index.html
+++ b/01-VueBase/12-前端模块化/ES6的模块化实现/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-</head>
-
-<body>
-
-  <script src="aaa.js" type="module"></script>
-  <script src="bbb.js" type="module"></script>
-  <script src="mmm.js" type="module"></script>
-</body>
-
+  <body>
+    <script src="aaa.js" type="module"></script>
+    <script src="bbb.js" type="module"></script>
+    <script src="mmm.js" type="module"></script>
+  </body>
 </html>
