--- a/01-VueBase/12-前端模块化/为什么要有模块化/index.html
+++ b/01-VueBase/12-前端模块化/为什么要有模块化/index.html
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-</head>
-
-<body>
-
-  <!-- 
+  <body>
+    <!-- 
     1.项目组长
     2.小明
     3.小红
   -->
-  <script src="main.js"></script>
-  <script src="aaa.js"></script>
-  <script src="bbb.js"></script>
-  <script src="mmm.js"></script>
-  <script src="nnn.js"></script>
-</body>
-
+    <script src="main.js"></script>
+    <script src="aaa.js"></script>
+    <script src="bbb.js"></script>
+    <script src="mmm.js"></script>
+    <script src="nnn.js"></script>
+  </body>
 </html>
