--- a/02-webpack的使用/05-webpack配置Plugin/index.html
+++ b/02-webpack的使用/05-webpack配置Plugin/index.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-</head>
-
-<body>
-
-  <div id="app">
-  </div>
-
-</body>
-
+  <body>
+    <div id="app"></div>
+  </body>
 </html>
