--- a/03-VueCli/04-箭头函数/03-箭头函数中的this的使用.html
+++ b/03-VueCli/04-箭头函数/03-箭头函数中的this的使用.html
@@ -1,65 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-</head>
+  <body>
+    <script>
+      // 什么时候使用箭头
+      // 当一个函数作为参数传入另一个函数中时
+      // setTimeout(function () {
+      //   // 打印window对象
+      //   console.log(this)
+      // }, 1000)
+      // setTimeout(() => {
+      //   // 打印window对象
+      //   console.log(this)
+      // }, 1000)
 
-<body>
-  <script>
-    // 什么时候使用箭头
-    // 当一个函数作为参数传入另一个函数中时
-    // setTimeout(function () {
-    //   // 打印window对象
-    //   console.log(this)
-    // }, 1000)
-    // setTimeout(() => {
-    //   // 打印window对象
-    //   console.log(this)
-    // }, 1000)
+      // 问题：箭头函数中的this是如何查找的？
+      // 答案：向外层作用域中，一层层查找this，直到有this的定义
+      // const obj = {
+      //   aaa() {
+      //     setTimeout(function () {
+      //       // 打印window对象
+      //       console.log(this)
+      //     })
+      //     setTimeout(() => {
+      //       // 打印obj对象
+      //       console.log(this);
+      //     })
+      //   }
+      // }
 
-    // 问题：箭头函数中的this是如何查找的？
-    // 答案：向外层作用域中，一层层查找this，直到有this的定义
-    // const obj = {
-    //   aaa() {
-    //     setTimeout(function () {
-    //       // 打印window对象
-    //       console.log(this)
-    //     })
-    //     setTimeout(() => {
-    //       // 打印obj对象
-    //       console.log(this);
-    //     })
-    //   }
-    // }
-
-    const obj = {
-      aaa() {
-        setTimeout(function () {
-          setTimeout(function () {
-            // 打印window对象
-            console.log(this)
+      const obj = {
+        aaa() {
+          setTimeout(function() {
+            setTimeout(function() {
+              // 打印window对象
+              console.log(this)
+            })
+            setTimeout(() => {
+              // 打印window对象
+              console.log(this)
+            })
           })
           setTimeout(() => {
-            // 打印window对象
-            console.log(this)
+            setTimeout(function() {
+              // 打印window对象
+              console.log(this)
+            })
+            setTimeout(() => {
+              // 打印obj对象
+              console.log(this)
+            })
           })
-        })
-        setTimeout(() => {
-          setTimeout(function () {
-            // 打印window对象
-            console.log(this)
-          })
-          setTimeout(() => {
-            // 打印obj对象
-            console.log(this)
-          });
-        })
+        }
       }
-    }
-    obj.aaa();
-  </script>
-</body>
-
+      obj.aaa()
+    </script>
+  </body>
 </html>
