--- a/01-VueBase/02-Vue的插值操作/04-v-text指令的使用.html
+++ b/01-VueBase/02-Vue的插值操作/04-v-text指令的使用.html
@@ -10,7 +10,7 @@
       <!-- 拼接字符串 -->
       <h2>{{message}}，张艺成</h2>
       <!-- 覆盖字符串 -->
-      <h2 v-text="message">，张艺成</h2>
+      <div v-text="message">，张艺成</div>
     </div>
 
     <script src="../js/vue.js"></script>
