--- a/01-VueBase/02-Vue的插值操作/06-v-cloak指令的使用.html
+++ b/01-VueBase/02-Vue的插值操作/06-v-cloak指令的使用.html
@@ -5,8 +5,8 @@
     <title>Document</title>
     <style>
       [v-cloak] {
-        color: red;
-        /* display: none; */
+        /* color: red; */
+        display: none;
       }
     </style>
   </head>
