--- a/01-VueBase/07-循环遍历/05-作业的回顾和完成.html
+++ b/01-VueBase/07-循环遍历/05-作业的回顾和完成.html
@@ -15,9 +15,9 @@
     <div id="app">
       <ul>
         <li
-          v-on:click="btnClick(index)"
-          :class="{red:currentIndex === index}"
           v-for="(item, index) in movies"
+          :class="{red:currentIndex === index}"
+          v-on:click="btnClick(index)"
           :key="index"
         >
           {{index}}-{{item}}
@@ -36,7 +36,7 @@
         },
         methods: {
           btnClick: function(e) {
-            this.i = e
+            this.currentIndex = e
           }
         }
       })
