--- a/01-VueBase/09-v-model使用/02-v-model的原理.html
+++ b/01-VueBase/09-v-model使用/02-v-model的原理.html
@@ -12,7 +12,7 @@
       <input
         type="text"
         :value="message"
-        @input="message = $event.target.value"
+        @input="valueChange"
       />
       <h2>{{message}}</h2>
     </div>
