--- a/01-VueBase/02-Vue的插值操作/03-v-html指令的使用.html
+++ b/01-VueBase/02-Vue的插值操作/03-v-html指令的使用.html
@@ -1,29 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-</head>
+  <body>
+    <div id="app">
+      <h2>{{url}}</h2>
+      <!-- v-html可以自动解析html语言，然后渲染到 -->
+      <div v-html="url"></div>
+    </div>
 
-<body>
-
-  <div id="app">
-    <h2>{{url}}</h2>
-    <!-- v-html可以自动解析html语言，然后渲染到 -->
-    <div v-html="url"></div>
-  </div>
-
-  <script src="../js/vue.js"></script>
-  <script>
-    const app = new Vue({
-      el: '#app',
-      data: {
-        message: '你好',
-        url: '<a href="http://www.baibu.com">百度一下</a>'
-      }
-    });
-  </script>
-</body>
-
+    <script src="../js/vue.js"></script>
+    <script>
+      const app = new Vue({
+        el: "#app",
+        data: {
+          message: "你好",
+          url: '<a href="http://www.baibu.com">百度一下</a>'
+        }
+      })
+    </script>
+  </body>
 </html>
