--- a/01-VueBase/07-循环遍历/01-v-for遍历数组.html
+++ b/01-VueBase/07-循环遍历/01-v-for遍历数组.html
@@ -12,6 +12,7 @@
         <li v-for="item in names">{{item}}</li>
       </ul>
 
+      <!-- 2.在遍历过程中，使用索引值(下标值) -->
       <ul>
         <li v-for="(item, index) in names">{{index + 1}}-{{item}}</li>
       </ul>
