--- a/01-VueBase/07-循环遍历/03-v-for使用过程添加key.html
+++ b/01-VueBase/07-循环遍历/03-v-for使用过程添加key.html
@@ -8,7 +8,7 @@
   <body>
     <div id="app">
       <ul>
-        <li v-for="item in letters" :key="item">{{item}}</li>
+        <li v-for="(item, index) in letters" :key="index">{{item}}</li>
       </ul>
     </div>
 
