--- a/01-VueBase/10-组件化开发/02-全局组件和局部组件.html
+++ b/01-VueBase/10-组件化开发/02-全局组件和局部组件.html
@@ -8,12 +8,9 @@
   <body>
     <div id="app">
       <cpn></cpn>
-      <cpn></cpn>
-      <cpn></cpn>
     </div>
 
     <div id="app2">
-      <cpn></cpn>
       <cpn></cpn>
     </div>
     <script src="../js/vue.js"></script>
@@ -23,15 +20,13 @@
         template: `
             <div>
                 <h2>我是标题</h2>
-                <p>我是内容</p>
-                <p>我是内容</p>
+                <p>全局组件和局部组件都使用我了</p>
             </div>`
       })
-      // 2.注册组件(全局组件，意味着可以在多个Vue的实例下使用)
-      // Vue.component('cpn', cpnC)
+      // 2.1.注册全局组件(意味着可以在多个Vue的实例下使用)
+      Vue.component('cpn', cpnC)
 
-      // 怎么注册的组件才是局部组件呢
-
+      // 2.2.注册局部组件
       const app = new Vue({
         el: "#app",
         data: {
