--- a/01-VueBase/10-组件化开发/05-组件模版的分离写法.html
+++ b/01-VueBase/10-组件化开发/05-组件模版的分离写法.html
@@ -8,7 +8,7 @@
   <body>
     <div id="app">
       <cpn></cpn>
-      <cpn></cpn>
+      <cpn2></cpn2>
     </div>
 
     <!-- 1.通过script标签来定义template，但是类型必须是type="text/x-template" -->
@@ -31,10 +31,9 @@
 
     <script src="../js/vue.js"></script>
     <script>
-      // 1.注册一个全局组件
-      Vue.component("cpn", {
-        template: "#cpn"
-      })
+      // 1.注册全局组件
+      Vue.component("cpn", { template: "#cpn" })
+      Vue.component("cpn2", { template: "#cpn2" })
 
       const app = new Vue({
         el: "#app",
