--- a/01-VueBase/10-组件化开发/13-组件访问-父访问子-children-refs.html
+++ b/01-VueBase/10-组件化开发/13-组件访问-父访问子-children-refs.html
@@ -8,9 +8,9 @@
   <body>
     <div id="app">
       <cpn></cpn>
-      <cpn></cpn>
       <cpn ref="test"></cpn>
-      <button @click="btnClick">按钮</button>
+      <button @click="btnClick1">按钮1</button>
+      <button @click="btnClick2">按钮2</button>
     </div>
 
     <template id="cpn">
@@ -27,15 +27,16 @@
           message: "你好"
         },
         methods: {
-          btnClick() {
+          btnClick1() {
             // 1.$children
-            // console.log(this.$children);
+            console.log(this.$children)
             // for (let child of this.$children) {
             //   console.log(child.name)
             //   child.showMessage()
             // }
-            // console.log(this.$children[2].name)
-
+            console.log(this.$children[1].name)
+          },
+          btnClick2() {
             // 2.$refs => 对象类型，默认是一个空的对象 ref='test'
             // 可以获得指定的子组件，一般都是用这种
             console.log(this.$refs.test.name)
